--- a/Build-a-Personal-Portfolio-Webpage/index.html
+++ b/Build-a-Personal-Portfolio-Webpage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Build a Personal Portfolio Webpage</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
