--- a/Build-a-Random-Quote-Machine/index.html
+++ b/Build-a-Random-Quote-Machine/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Quote Machine</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
