--- a/Build-a-Pomodoro-Clock/index.html
+++ b/Build-a-Pomodoro-Clock/index.html
@@ -15,7 +15,7 @@
             <h4>BREAK LENGTH</h4>
             <p>
                 <span class="leftMinus">-</span>
-                <span class="breakLength">10</span>
+                <span class="breakLength">5</span>
                 <span class="leftAdd">+</span>
             </p>
         </div>
@@ -23,7 +23,7 @@
             <h4>SESSION LENGTH</h4>
             <p>
                 <span class="rightMinus">-</span>
-                <span class="sessionLength">10</span>
+                <span class="sessionLength">25</span>
                 <span class="rightAdd">+</span>
             </p>
         </div>
@@ -32,9 +32,12 @@
                 <div class="back"> </div>
             </div>
             <h2 class="state">Session</h2>
-            <p class="countdown">33:33</p>
+            <p class="countdown">
+                25
+            </p>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
