--- a/Build-a-Tic-Tac-Toe-Game/index.html
+++ b/Build-a-Tic-Tac-Toe-Game/index.html
@@ -12,14 +12,14 @@
     <script src="index.js"></script>
 </body>
 <div class="welcome">
-    <h1>Choose one of the characters and<br> we will start the game</h1>
-    <p><span>X</span><span>O</span></p>
+    <h1>Choose one of the characters</h1>
+    <p><span class="x">X</span> OR <span class="o">O</span></p>
 </div>
 
-<div>
+<div class="chessboard">
     <h1>Tic Tac Toe Game</h1>
     <ul>
-        <li></li>
+        <li>X</li>
         <li></li>
         <li></li>
         <li></li>
