--- a/Build-a-Tic-Tac-Toe-Game/index.html
+++ b/Build-a-Tic-Tac-Toe-Game/index.html
@@ -15,7 +15,11 @@
     <h1>Choose one of the characters</h1>
     <p><span class="x">X</span> OR <span class="o">O</span></p>
 </div>
-
+<div class="gameOver">
+    <h1>Game Over</h1>
+    <p class="result">Who win?</p>
+    <button>play again</button>
+</div>
 <div class="chessboard">
     <h1>Tic Tac Toe Game</h1>
     <ul>
