--- a/Build-a-Tic-Tac-Toe-Game/index.html
+++ b/Build-a-Tic-Tac-Toe-Game/index.html
@@ -20,7 +20,8 @@
     <p class="result">Who win?</p>
     <button>play again</button>
 </div>
-<div class="chessboard">
+<!-- 棋盘禁止复制 -->
+<div class="chessboard" onselectstart="return false">
     <h1>Tic Tac Toe Game</h1>
     <ul>
         <li>X</li>
