--- a/Build-a-Tic-Tac-Toe-Game/index.html
+++ b/Build-a-Tic-Tac-Toe-Game/index.html
@@ -11,20 +11,22 @@
 <body>
     <!-- 欢迎弹窗 -->
     <div class="welcome">
-        <h1>player1 choose one of the characters</h1>
+        <h1>Player 1 choose</h1>
         <p class="choose"><span class="x">X</span> OR <span class="o">O</span></p>
     </div>
     <!-- 结束弹窗 -->
     <div class="gameOver">
         <h1>Game Over</h1>
-        <p class="result">Who win?</p>
+        <p class="result"></p>
         <button class="again">play again</button>
-        <button class="close">exit</button>
+        <button class="close">exit and close</button>
     </div>
-    <!-- 棋盘主体，禁止复制 -->
+    <!-- 棋盘主体，禁用文本复制 -->
     <div class="chessboard" onselectstart="return false">
         <h1>Tic Tac Toe Game</h1>
         <p class="tip"></p>
+        <p class="tip p1"></p>
+        <p class="tip p2"></p>
         <ul>
             <li></li>
             <li></li>
