--- a/Build-a-Markdown-Previewer/index.html
+++ b/Build-a-Markdown-Previewer/index.html
@@ -72,6 +72,7 @@
                     value: ""
                 }
             }
+            // 初始化
             initialState(){
                 this.setState ({
                     value:"Heading\n=======\n\nSub-heading\n-----------\n \n### Another deeper heading\n \nParagraphs are separated\nby a blank line.\n\nLeave 2 spaces at the end of a line to do a  \nline break\n\nText attributes *italic*, **bold**, \n`monospace`, ~~strikethrough~~ .\n\nShopping list:\n\n  * apples\n  * oranges\n  * pears\n\nNumbered list:\n\n  1. apples\n  2. oranges\n  3. pears\n\nThe rain---not the reign---in\nSpain.\n\n *[Herman Fassett](https://freecodecamp.com/hermanfassett)*"
